[metadata]
name = aboutcode
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = aboutcode
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/aboutcode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    docs

license_files =
    apache-2.0.LICENSE
    NOTICE

[options]
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =


[options.extras_require]

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
