[metadata]
name = aboutcode
version = 0.0.1
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = aboutcode
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/aboutcode-org/aboutcode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    docs

license_files =
    apache-2.0.LICENSE
    NOTICE

[options]
zip_safe = false
setup_requires = setuptools_scm[toml] >= 4
python_requires = >=3.10
packages = find:
install_requires =


[options.packages.find]
where = .
exclude =
    automation
    designs
    docs

[options.extras_require]
docs =
    Sphinx
    sphinx-rtd-theme
    sphinx-reredirects
    doc8
    sphinx-autobuild
    sphinx-rtd-dark-mode
    sphinx-copybutton
